# summer-hardware-projects

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  agent_roles.MD  package-lock.json  summer_projects_overview.aux  summer_projects_overview.out  summer_projects_overview.tex  verify-screenshot.js  实验室器材采购.xlsx  电器元件采购.xlsx
docs/: 200.html  404.html  _payload.json  index.html  index.txt  projects.html  projects.txt
example_course_course_work/: ABSTRACTED_DESIGN_METHODOLOGY.md  ASSIGNMENT_DESIGN_STANDARD.md  ESE5160 S26 Schedule [Public] - S26-Working.csv  REVIEW_REPORT.md  REVIEW_REPORT_V2.md
project-01-binocular-thermal-imager/: README.md
project-01-smart-speaker/: README.md
project-02-env-monitor/: README.md
project-03-4mode-keyboard/: README.md
project-03-gesture-cv/: README.md
project-03-macro-keyboard-mid/: README.md
project-04-pocket-oscilloscope-high/: README.md
project-04-pocket-oscilloscope-xhigh/: README.md
project-05-desktop-pet/: README.md
project-05-desktop-pet-mid/: README.md
project-05-desktop-pet-mid/software/tests/: CMakeLists.txt  README.md
project-05-desktop-pet/software/components/sparkbot_core/: CMakeLists.txt  sparkbot_core.c  sparkbot_core.h
project-05-desktop-pet/software/main/: CMakeLists.txt  state_machine.h  utils.h
project-06-weather-cube/: README.md
project-06-weather-cube-easy/: README.md
project-07-bipedal-wheeled-robot/: README.md
project-08-electronbot-xhigh/: README.md
project-09-desk-satellite-high/: README.md
prompts/: 00_MASTER_PROMPT.md  01_agent_roles.md  02_research_phase.md  03_evaluation_phase.md  04_project_build_phase.md  05_website_visual_upgrade.md  06_website_interactive_upgrade.md  07_website_architecture_upgrade.md  08_website_media_effects_upgrade.md  09_hero_mechanical_figure_fusion.md  10_hero_2dvideo_3dconstellation.md  (+10 more)
(+1169 files in other folders)
